--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
 .bt{
-    color: #0000ff;
-background url:(/home/myc/Desktop/projects/HTML-CSS/Medic-care-clinic/images/facebook.png"
-    
+    color: 
 }
